[gd_scene load_steps=4 format=2]

[ext_resource path="res://core/core.gd" type="Script" id=1]
[ext_resource path="res://rei.png" type="Texture" id=2]

[sub_resource type="AudioStreamSample" id=1]

[node name="core" type="Node2D"]
script = ExtResource( 1 )

[node name="timer_tick" type="Timer" parent="."]

[node name="bg" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1079.0
color = Color( 0.376471, 0.376471, 0.376471, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rei" type="Sprite" parent="bg"]
modulate = Color( 0.101961, 0, 1, 0.12549 )
position = Vector2( 961.444, 539.5 )
scale = Vector2( 3.74369, 2.10742 )
texture = ExtResource( 2 )

[node name="interface" type="Node2D" parent="."]

[node name="title" type="Label" parent="interface"]
margin_top = 17.0
margin_right = 960.0
margin_bottom = 41.0
rect_scale = Vector2( 2, 2 )
text = "merlang v1_2"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="credit" type="Label" parent="interface"]
margin_left = 1803.18
margin_top = 1031.73
margin_right = 1855.18
margin_bottom = 1049.73
rect_scale = Vector2( 2, 2 )
text = "@ainlid"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="load_menu" type="Node" parent="interface"]

[node name="load_button" type="Button" parent="interface/load_menu"]
margin_left = 67.0
margin_top = 64.4856
margin_right = 561.0
margin_bottom = 120.486
text = "Load audio"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="filename" type="Label" parent="interface/load_menu"]
margin_left = 67.0
margin_top = 174.0
margin_right = 560.0
margin_bottom = 668.0
text = "No files selected"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="file_dialog" type="FileDialog" parent="interface/load_menu"]
visible = true
margin_left = 66.0
margin_top = 192.444
margin_right = 560.0
margin_bottom = 668.444
window_title = "Open a File"
dialog_text = "Select a .wav audio file"
mode = 0
access = 2
filters = PoolStringArray( "*.wav" )
current_dir = "/Daniil/art/merlang"
current_path = "/Daniil/art/merlang/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="play_button" type="Button" parent="interface"]
margin_left = 67.0
margin_top = 733.029
margin_right = 561.0
margin_bottom = 789.029
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="info" type="Label" parent="interface"]
margin_left = 617.0
margin_top = 174.0
margin_right = 1735.0
margin_bottom = 256.0
text = "Try different seeds and record the good finds! The controls are gone, sorry. I didn't need them, but it's open source if you want to add anything yourself. Good luck!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="record_button" type="Button" parent="interface"]
margin_left = 67.0
margin_top = 839.0
margin_right = 561.0
margin_bottom = 895.0
toggle_mode = true
text = "Record"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quit_button" type="Button" parent="interface"]
margin_left = 1863.83
margin_top = 1.41422
margin_right = 1919.83
margin_bottom = 57.4142
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="master_volume_slider" type="HSlider" parent="interface"]
margin_left = 788.172
margin_top = 733.029
margin_right = 1084.17
margin_bottom = 789.029
min_value = -12.0
max_value = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="master_volume_label" type="Label" parent="interface"]
margin_left = 618.172
margin_top = 733.029
margin_right = 743.172
margin_bottom = 789.029
text = "Master volume: "
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="seed_menu" type="Node" parent="interface"]

[node name="box" type="SpinBox" parent="interface/seed_menu"]
margin_left = 788.172
margin_top = 824.35
margin_right = 1084.17
margin_bottom = 878.35
max_value = 1e+10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label" type="Label" parent="interface/seed_menu"]
margin_left = 618.172
margin_top = 824.35
margin_right = 743.172
margin_bottom = 880.35
text = "RNG seed: "
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="refresh" type="Button" parent="interface/seed_menu"]
margin_left = 1084.17
margin_top = 824.35
margin_right = 1277.17
margin_bottom = 880.35
text = "Refresh RNG"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="save_menu" type="Node" parent="interface"]

[node name="button" type="Button" parent="interface/save_menu"]
margin_left = 67.0
margin_top = 953.551
margin_right = 237.0
margin_bottom = 1009.55
text = "Save recording to:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="path_label" type="LineEdit" parent="interface/save_menu"]
margin_left = 237.0
margin_top = 954.0
margin_right = 882.0
margin_bottom = 1010.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="endless_toggle" type="CheckButton" parent="interface"]
margin_left = 618.0
margin_top = 613.0
margin_right = 882.0
margin_bottom = 663.0
text = "Endless mode"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="audio_record" type="AudioStreamPlayer" parent="."]
stream = SubResource( 1 )
autoplay = true

[node name="timer_end" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="timer_tick" to="." method="_tick"]
[connection signal="pressed" from="interface/load_menu/load_button" to="." method="_load_pressed"]
[connection signal="file_selected" from="interface/load_menu/file_dialog" to="." method="_file_selected"]
[connection signal="pressed" from="interface/play_button" to="." method="_play_pressed"]
[connection signal="pressed" from="interface/record_button" to="." method="_record_pressed"]
[connection signal="pressed" from="interface/quit_button" to="." method="_quit_pressed"]
[connection signal="value_changed" from="interface/master_volume_slider" to="." method="_set_master_volume"]
[connection signal="value_changed" from="interface/seed_menu/box" to="." method="_set_seed"]
[connection signal="pressed" from="interface/seed_menu/refresh" to="." method="_randomize_seed"]
[connection signal="pressed" from="interface/save_menu/button" to="." method="_save_pressed"]
[connection signal="toggled" from="interface/endless_toggle" to="." method="_endless_toggle"]
[connection signal="timeout" from="timer_end" to="." method="_play_stop"]
